Code Midterm6352410014 V.2 Fix radio box

--- a/OnlineService.html
+++ b/OnlineService.html
@@ -30,9 +30,9 @@
                 คำนำหน้า
             </td>
             <td>
-                <input type="radio" name="Mr" id="" value="mr">นาย
-                <input type="radio" name="Mrs" id="" value="Mrs">นาง
-                <input type="radio" name="Miss" id="" value="Miss">นางสาว
+                <input type="radio" name="neme_type" id="" checked value="mr">นาย
+                <input type="radio" name="neme_type" id="" value="Mrs">นาง
+                <input type="radio" name="neme_type" id="" value="Miss">นางสาว
             </td>
         </tr>
         <tr>
@@ -102,7 +102,7 @@
         </tr>
     </table>
 
-    <hr width="80%">    
+    <hr width="80%">
     <table border="0" width="800" align="center">
         <tr>
             <td align="center">
